Simplify UI code and start to add in the balance calculation logic
