# docs/swagger.json
@@ -18,6 +18,16 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/api/v1/balance/all": {
+            "get": {
+                "summary": "Get all balances",
+                "responses": {}
+            },
+            "post": {
+                "summary": "Update all balances",
+                "responses": {}
+            }
+        },
         "/api/v1/health": {
             "get": {
                 "summary": "Health check",
@@ -82,6 +92,19 @@
         "/api/v1/payment/{id}": {
             "get": {
                 "summary": "Get a payment by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Payment ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            },
+            "delete": {
+                "summary": "Delete a payment by ID",
                 "parameters": [
                     {
                         "type": "integer",
